﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
23 Jul 2015, PHP 7.0.0 Beta 2

09 Jul 2015, PHP 7.0.0 Beta 1

- Core:
  . Fixed bug #70006 (cli - function with default arg = STDOUT crash output).
    (Laruence)
  . Fixed bug #69521 (Segfault in gc_collect_cycles()).
    (arjen at react dot com, Laruence)
  . Improved zend_string API (Francois Laupretre)
  . Fixed bug #69955 (Segfault when trying to combine [] and assign-op on
    ArrayAccess object). (Laruence)
  . Fixed bug #69957 (Different ways of handling div/mod/intdiv). (Bob)
  . Fixed bug #69900 (Too long timeout on pipes). (Anatol)
  . Fixed bug #62210 (Exceptions can leak temporary variables. As a part of
    the fix serious refactoring was done. op_array->brk_cont_array was removed,
    and replaced with more general and speed efficient op_array->T_liveliness.
    ZEND_GOTO opcode is always replaced by ZEND_JMP at compile time).
    (Bob, Dmitry, Laruence)

- CLI server:
  . Fixed bug #69655 (php -S changes MKCALENDAR request method to MKCOL). (cmb)
  . Fixed bug #64878 (304 responses return Content-Type header). (cmb)

- COM:
  . Fixed bug #69939 (Casting object to bool returns false). (Kalle)

- JSON
  . Fixed bug #62010 (json_decode produces invalid byte-sequences).
    (Jakub Zelenka)

- OCI8:
  . Corrected oci8 hash destructors to prevent segfaults, and a few other fixes.
    (Cameron Porter)

- ODBC:
  . Fixed bug #69975 (PHP segfaults when accessing nvarchar(max) defined
    columns). (cmb)

- OpenSSL:
  . Fixed bug #69882 (OpenSSL error "key values mismatch" after
    openssl_pkcs12_read with extra cert) (Tomasz Sawicki)

- PCRE:
  . Fixed bug #53823 (preg_replace: * qualifier on unicode replace garbles the
    string). (cmb)

- Session:
  . Fixed bug #69952 (Data integrity issues accessing superglobals by
    reference). (Bob)

- SPL: