@@ -1608,9 +1608,12 @@ static ZEND_OPCODE_HANDLER_RET ZEND_FASTCALL ZEND_FAST_CALL_SPEC_HANDLER(ZEND_OP
 		ZEND_VM_CONTINUE();
 	}
 	/* set no delayed exception */
-	Z_OBJ_P(fast_call) = NULL;
-	/* set return address */
-	fast_call->u2.lineno = opline - EX(func)->op_array.opcodes;
+	if (UNEXPECTED(Z_OBJ_P(fast_call) != NULL)) {
+		fast_call->u2.lineno = (uint32_t)-1;
+	} else {
+		/* set return address */
+		fast_call->u2.lineno = opline - EX(func)->op_array.opcodes;
+	}
 	ZEND_VM_SET_OPCODE(OP_JMP_ADDR(opline, opline->op1));
 	ZEND_VM_CONTINUE();
 }
